// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card shows Card with default feedback 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with default props 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with non-default elevation 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.07538939058881129rem 0.75rem rgba(39,47,78,0.3741399931653331));
  filter: drop-shadow(0rem 0.07538939058881129rem 0.75rem rgba(39,47,78,0.3741399931653331));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="3"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with ripple feedback and no onClick 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  background-color: #fff;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  />
</div>
`;

exports[`Card shows Card with ripple feedback with onClick 1`] = `
.c1 {
  position: relative;
}

.c3 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  background-color: #fff;
}

.c2 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  >
    <div
      class="c1 c2"
    >
      <svg
        class="c3"
        height="0px"
        viewBox="0 0 0 0"
        width="0px"
      />
    </div>
  </div>
</div>
`;

exports[`Card shows Card with simple feedback and no onClick 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  background-color: #fff;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  />
</div>
`;

exports[`Card shows Card with simple feedback with onClick 1`] = `
.c0 {
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  border-radius: 0.25rem;
  border: 0px solid transparent;
  -webkit-transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  transition: filter .5s, box-shadow .5s, border .3s, background-color .3s;
  -webkit-filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  filter: drop-shadow(0rem 0.06653090368236622rem 0.25rem rgba(39,47,78,0.4292196217912265));
  background-color: #fff;
}

.c0:active {
  background-color: #e6e6e6;
}

<div>
  <div
    class=" c0"
    data-test-id="foundry-card"
    elevation="1"
  />
</div>
`;
